@@ -14,17 +14,20 @@
 @end
 
 @implementation ABStore
-+ (void)registered
+- (NSDictionary *)defaults
 {
-  NSDictionary *defs = [NSDictionary dictionaryWithObjectsAndKeys:[[NSColor purpleColor] description], ST_COLOR,
-				     [[NSColor whiteColor] description], ST_TEXT_COLOR,
-				     [NSNumber numberWithBool:NO], ST_RW,
-				     [NSNumber numberWithBool:YES], ST_DISPLAY,
-				     [NSNumber numberWithBool:YES], ST_ENABLED,
-				     @"ABStore", ST_CLASS,
-				     nil, nil];
-  [[ConfigManager globalConfig] setObject:defs forKey:_(@"birthdays")];
-  [[StoreManager globalManager] addStoreNamed:_(@"birthdays")];
+  return [NSDictionary dictionaryWithObjectsAndKeys:[[NSColor purpleColor] description], ST_COLOR,
+		       [[NSColor whiteColor] description], ST_TEXT_COLOR,
+		       [NSNumber numberWithBool:NO], ST_RW,
+		       [NSNumber numberWithBool:YES], ST_DISPLAY,
+		       [NSNumber numberWithBool:YES], ST_ENABLED,
+		       @"ABStore", ST_CLASS,
+		       nil, nil];
+}
+
++ (NSString *)storeName
+{
+  return _(@"birthdays");
 }
 
 + (NSString *)storeTypeName
@@ -34,22 +37,18 @@
 
 - (void)loadData
 {
-  ADAddressBook *ab;
   ADPerson *person;
-  NSArray *people;
   NSEnumerator *enumerator;
   id value;
   Date *date;
   Event *event;
   RecurrenceRule *rrule;
 
-  ab = [ADAddressBook sharedAddressBook];
-  people = [ab people];
-  enumerator = [people objectEnumerator];
+  enumerator = [[[ADAddressBook sharedAddressBook] people] objectEnumerator];
   rrule = [[RecurrenceRule alloc] initWithFrequency:recurrenceFrequenceYearly];
   while ((person = [enumerator nextObject])) {
     value = [person valueForProperty:ADBirthdayProperty];
-    if (value && [value class] == [NSCalendarDate class]) {
+    if (value && [value isMemberOfClass:[NSCalendarDate class]]) {
       date = [Date today];
       [date setYear:[value yearOfCommonEra]];
       [date setMonth:[value monthOfYear]];
@@ -57,6 +56,7 @@
       event = [[Event alloc] initWithStartDate:date duration:0 title:[person screenName]];
       [event setAllDay:YES];
       [event setRRule:rrule];
+      [event setText:AUTORELEASE([[NSAttributedString alloc] initWithString:_(@"Birthday")])];
       [self add:event];
       [event release];
     }
