@@ -1,6 +1,6 @@
 /***
 French.lproj/Localizable.strings
-updated by make_strings 2010-03-05 10:40:10 +0100
+updated by make_strings 2010-03-11 09:46:33 +0100
 add comments above this one
 ***/
 
@@ -10,6 +10,14 @@ add comments above this one
 /* File: DayView.m:42 */
 /* File: WeekView.m:32 */
 "All day : %@" = "Toute la journ\U00E9e : %@";
+
+/* File: ABStore.m:31 */
+"birthdays" = "anniversaires";
+
+
+/*** Strings from ABStore.m ***/
+/* File: ABStore.m:60 */
+"Birthday" = "Anniversaire";
 
 
 /*** Strings from AppController.m ***/
